AC_INIT(beagle-xesam, 0.2, arunsr@svn.gnome.org)
AC_PREREQ(2.50)
AC_CONFIG_SRCDIR(src/XesamAdaptor.cs)
AC_COPYRIGHT([Copyright 2005-2007 Arun Raghavan])

AM_INIT_AUTOMAKE([1.8 foreign dist-bzip2 no-dist-gzip])

AM_MAINTAINER_MODE

MONO_REQUIRED=1.0
DBUS_REQUIRED=0.60
BEAGLE_REQUIRED=0.3.0
GLIBSHARP_REQUIRED=2.8.0
GTKSHARP_REQUIRED=2.8.0
NDESK_DBUS_REQUIRED=0.3.0

PKG_CHECK_MODULES(DBUS, dbus-1 >= $DBUS_REQUIRED)

dnl put dbus-sharp here eventually

PKG_CHECK_MODULES(GLIBSHARP, gtk-sharp-2.0 >= $GLIBSHARP_REQUIRED)
AC_SUBST(GLIBSHARP)

PKG_CHECK_MODULES(GTKSHARP, gtk-sharp-2.0 >= $GTKSHARP_REQUIRED)
AC_SUBST(GTKSHARP)

PKG_CHECK_MODULES(BEAGLE, beagle-0.0 >= $BEAGLE_REQUIRED)
AC_SUBST(BEAGLE)

PKG_CHECK_MODULES(NDESK_DBUS, ndesk-dbus-glib-1.0 >= $NDESK_DBUS_REQUIRED)
AC_SUBST(NDESK_DBUS_LIBS)

AC_PATH_PROG(MCS, gmcs)
if test x$MCS = x; then
	AC_MSG_ERROR(You need mcs)
fi

AC_PATH_PROG(MONO, mono)
if test x$MONO = x; then
	AC_MSG_ERROR(You need mono)
fi

MCS_FLAGS="-codepage:utf8"
MONO_FLAGS=
if test $USE_MAINTAINER_MODE = yes; then
	MCS_FLAGS="$MCS_FLAGS -debug"
	MONO_FLAGS="$MONO_FLAGS --debug"
fi
AC_SUBST(MCS_FLAGS)
AC_SUBST(MONO_FLAGS)

AC_PATH_PROG(GACUTIL, gacutil)
if test x$GACUTIL = x; then
	AC_MSG_ERROR(You need gacutil)
fi

dnl GACUTIL_FLAGS='/package Beagle /gacdir $(libdir) /root $(DESTDIR)$(libdir)'
AC_SUBST(GACUTIL_FLAGS)

AC_OUTPUT([
Makefile
src/Makefile
])
